--- a/android/app/src/main/res/layout/bottom_sheet_dog_edit_birthday.xml
+++ b/android/app/src/main/res/layout/bottom_sheet_dog_edit_birthday.xml
@@ -25,7 +25,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="언제 태어났나요?"
+            android:text="@string/bottom_sheet_dog_edit_birthday_title"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
