--- a/android/app/src/main/res/layout/fragment_group_add.xml
+++ b/android/app/src/main/res/layout/fragment_group_add.xml
@@ -138,6 +138,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="5dp"
+                        app:actionHandler="@{vm}"
                         app:menu="@{GroupFilter.SMALL_DOG_NAME}" />
 
                     <include
@@ -145,6 +146,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="5dp"
+                        app:actionHandler="@{vm}"
                         app:menu="@{GroupFilter.MEDIUM_DOG_NAME}" />
 
                     <include
@@ -152,6 +154,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="5dp"
+                        app:actionHandler="@{vm}"
                         app:menu="@{GroupFilter.BIG_DOG_NAME}" />
                 </LinearLayout>
 
@@ -179,6 +182,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="5dp"
+                        app:actionHandler="@{vm}"
                         app:menu="@{GroupFilter.MALE_NAME}" />
 
                     <include
@@ -186,6 +190,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="5dp"
+                        app:actionHandler="@{vm}"
                         app:menu="@{GroupFilter.NEUTRALIZING_FEMALE_NAME}" />
 
                 </LinearLayout>
@@ -204,6 +209,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="5dp"
+                        app:actionHandler="@{vm}"
                         app:menu="@{GroupFilter.FEMALE_NAME}" />
 
                     <include
@@ -211,6 +217,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="5dp"
+                        app:actionHandler="@{vm}"
                         app:menu="@{GroupFilter.NEUTRALIZING_MALE_NAME}" />
                 </LinearLayout>
 
@@ -361,6 +368,7 @@
             </LinearLayout>
 
         </ScrollView>
+
         <Button
             android:id="@+id/btn_group_add_commit"
             android:layout_width="match_parent"
@@ -369,7 +377,7 @@
             android:layout_marginBottom="24dp"
             android:background="@drawable/rect_white_fill_radius10"
             android:text="@string/group_add_group"
-            app:layout_constraintTop_toBottomOf="@+id/sv_group_add_main"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/sv_group_add_main" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
