--- a/android/app/src/main/res/layout/include_add_dog_menu.xml
+++ b/android/app/src/main/res/layout/include_add_dog_menu.xml
@@ -3,15 +3,19 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
+        <variable
+            name="actionHandler"
+            type="com.woowacourse.friendogly.presentation.ui.group.add.GroupAddActionHandler" />
         <variable
             name="menu"
             type="java.lang.String" />
     </data>
 
     <CheckBox
+        android:onCheckedChanged="@{(buttonView, isChecked) -> actionHandler.selectGroupFilter(menu, isChecked)}"
         android:id="@+id/customCheckBox"
         style="@style/CustomCheckBox"
+        android:checked="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:button="@null"
