--- a/android/app/src/main/res/layout/bottom_sheet_foot_print.xml
+++ b/android/app/src/main/res/layout/bottom_sheet_foot_print.xml
@@ -6,8 +6,8 @@
     <data>
 
         <variable
-            name="dog"
-            type="com.woowacourse.friendogly.presentation.ui.woof.DogUiModel" />
+            name="vm"
+            type="com.woowacourse.friendogly.presentation.ui.woof.footprint.FootPrintViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -30,7 +30,7 @@
 
             <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/iv_woof_dog"
-                glide="@{dog.imageUrl}"
+                glide="@{vm.footPrint.imageUrl}"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_marginHorizontal="90dp"
@@ -41,13 +41,13 @@
                 tools:src="@drawable/ic_launcher_background" />
 
             <TextView
-                android:id="@+id/tv_woof_dog_name"
+                android:id="@+id/tv_woof_dog_walking"
                 style="@style/Theme.AppCompat.TextView.SemiBold.Gray10.Size18"
+                footPrintWalking="@{vm.footPrint.name}"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
                 android:gravity="center"
-                dogName="@{dog.name}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/iv_woof_dog"
@@ -62,10 +62,10 @@
                 android:background="@drawable/rect_orange700_fill_12"
                 android:paddingHorizontal="25dp"
                 android:paddingVertical="7dp"
-                android:text="@{@string/woof_dog_age(dog.age)}"
+                android:text="@{@string/woof_dog_age(vm.footPrint.age)}"
                 app:layout_constraintEnd_toStartOf="@id/tv_woof_dog_size"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_woof_dog_name"
+                app:layout_constraintTop_toBottomOf="@id/tv_woof_dog_walking"
                 tools:text="11살" />
 
             <TextView
@@ -77,10 +77,10 @@
                 android:background="@drawable/rect_orange700_fill_12"
                 android:paddingHorizontal="25dp"
                 android:paddingVertical="7dp"
-                android:text="@{dog.size}"
+                android:text="@{vm.footPrint.size}"
                 app:layout_constraintEnd_toStartOf="@id/tv_woof_dog_gender"
                 app:layout_constraintStart_toEndOf="@id/tv_woof_dog_age"
-                app:layout_constraintTop_toBottomOf="@id/tv_woof_dog_name"
+                app:layout_constraintTop_toBottomOf="@id/tv_woof_dog_walking"
                 tools:text="소형견" />
 
             <TextView
@@ -92,10 +92,10 @@
                 android:background="@drawable/rect_orange700_fill_12"
                 android:paddingHorizontal="25dp"
                 android:paddingVertical="7dp"
-                android:text="@{dog.gender}"
+                android:text="@{vm.footPrint.gender}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/tv_woof_dog_size"
-                app:layout_constraintTop_toBottomOf="@id/tv_woof_dog_name"
+                app:layout_constraintTop_toBottomOf="@id/tv_woof_dog_walking"
                 tools:text="암컷" />
 
             <TextView
@@ -119,7 +119,7 @@
                 android:background="@drawable/rect_orange100_fill_12"
                 android:minHeight="80dp"
                 android:padding="15dp"
-                android:text="@{dog.description}"
+                android:text="@{vm.footPrint.description}"
                 app:layout_constraintTop_toBottomOf="@id/tv_woof_dog_introduce"
                 tools:text="땡이는 사람을 좋아해요! 땡이를 보게 되면 말 걸어주세요!!" />
         </androidx.constraintlayout.widget.ConstraintLayout>
