--- a/android/app/src/main/res/layout/item_group.xml
+++ b/android/app/src/main/res/layout/item_group.xml
@@ -100,8 +100,7 @@
             app:layout_constraintTop_toBottomOf="@id/tv_group_list_group_content" />
 
         <TextView
-            applyCurrentNumberOfPeople="@{group.currentNumberOfPeople}"
-            applyMaximumNumberOfPeople="@{group.maximumNumberOfPeople}"
+            android:text="@{@string/group_number_of_people(group.currentNumberOfPeople,group.maximumNumberOfPeople)}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
@@ -112,8 +111,7 @@
 
         <TextView
             android:id="@+id/tv_group_list_user_info"
-            applyGroupLeader="@{group.groupLeader}"
-            applyGroupLocation="@{group.groupLocation}"
+            android:text="@{@string/group_group_info(group.groupLeader,group.groupLocation)}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
