--- a/android/app/src/main/res/layout/include_group_selector.xml
+++ b/android/app/src/main/res/layout/include_group_selector.xml
@@ -16,6 +16,10 @@
             name="actionHandler"
             type="com.woowacourse.friendogly.presentation.ui.group.list.GroupListActionHandler" />
 
+        <variable
+            name="actionHandler"
+            type="com.woowacourse.friendogly.presentation.ui.group.list.GroupListActionHandler" />
+
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
