feat: 멍멍짖기 패이지 내비게이션 연결

--- a/android/app/src/main/res/navigation/navigation_main.xml
+++ b/android/app/src/main/res/navigation/navigation_main.xml
@@ -31,6 +31,13 @@
 
     </fragment>
 
+    <fragment
+        android:id="@+id/woofFragment"
+        android:name="com.woowacourse.friendogly.presentation.ui.woof.WoofFragment"
+        android:label="WoofFragment"
+        tools:layout="@layout/fragment_woof">
+    </fragment>
+
 
     <fragment
         android:id="@+id/chatListFragment"
