feat: 위치 버튼 클릭 이벤트 기능 구현

--- a/android/app/src/main/res/layout/fragment_woof.xml
+++ b/android/app/src/main/res/layout/fragment_woof.xml
@@ -13,17 +13,26 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
+        <View
+            android:id="@+id/btn_woof_location"
+            android:layout_width="52dp"
+            android:layout_height="52dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginBottom="42dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
         <ImageButton
             android:id="@+id/btn_map_mark"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_marginEnd="14dp"
+            android:layout_marginEnd="12dp"
             android:layout_marginBottom="20dp"
+            android:background="@drawable/ripple_circle_white"
             android:clickable="true"
             android:focusable="true"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_mark_btn"
-            android:background="@drawable/ripple_circle_white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
