feat: 모임 추가 상세 구현

--- a/android/app/src/main/res/layout/fragment_group_add_filter.xml
+++ b/android/app/src/main/res/layout/fragment_group_add_filter.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -13,11 +12,9 @@
     </data>
 
     <LinearLayout
-        android:id="@+id/ll_group_add_information"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:context=".presentation.ui.group.add.information.GroupAddInformationFragment">
+        android:orientation="vertical">
 
         <TextView
             style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size25"
