feat: 지도 반경 표시 기능

--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -24,4 +24,5 @@
     <color name="orange01">#FFE8D6</color>
 
     <color name="blue">#8AABFF</color>
+    <color name="map_circle">#1A6568EB</color>
 </resources>
