--- a/android/app/src/main/res/layout/item_chat_come_out.xml
+++ b/android/app/src/main/res/layout/item_chat_come_out.xml
@@ -8,6 +8,7 @@
 
 
     <TextView
+        android:id="@+id/tv_chat_come_message"
         style="@style/Theme.AppCompat.TextView.Regular.Gray07.Size16"
         android:layout_width="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
