--- a/android/app/src/main/res/layout/activity_group_add.xml
+++ b/android/app/src/main/res/layout/activity_group_add.xml
@@ -27,14 +27,16 @@
             android:layout_width="match_parent"
             android:layout_height="56dp"/>
         <ImageView
+            android:background="@drawable/ripple_circle_white"
+            android:onClick="@{()->actionHandler.cancelAddGroup()}"
             android:layout_marginStart="12dp"
             android:src="@drawable/ic_close"
             app:layout_constraintTop_toTopOf="@id/view_group_add_top_bar"
             app:layout_constraintBottom_toBottomOf="@id/view_group_add_top_bar"
             app:layout_constraintStart_toStartOf="@id/view_group_add_top_bar"
             android:id="@+id/iv_group_add_back_button"
-            android:layout_width="30dp"
-            android:layout_height="30dp"/>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
         <TextView
             style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size16"
             android:text="@string/group_list_add_title"
