--- a/android/app/src/main/res/layout/activity_group_add.xml
+++ b/android/app/src/main/res/layout/activity_group_add.xml
@@ -4,9 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+        <import type="com.woowacourse.friendogly.presentation.ui.group.add.adapter.GroupAddAdapter"/>
+        <variable
+            name="groupAddAdapter"
+            type="GroupAddAdapter" />
+
         <variable
             name="vm"
             type="com.woowacourse.friendogly.presentation.ui.group.add.GroupAddViewModel" />
+
         <variable
             name="actionHandler"
             type="com.woowacourse.friendogly.presentation.ui.group.add.GroupAddActionHandler" />
@@ -17,72 +23,78 @@
         android:layout_height="match_parent"
         android:paddingHorizontal="10dp"
         tools:context=".presentation.ui.group.add.GroupAddActivity">
+
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/vp_group_add"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent" />
+
         <View
             android:id="@+id/view_group_add_top_bar"
-            app:layout_constraintTop_toTopOf="parent"
             android:layout_width="match_parent"
-            android:layout_height="56dp"/>
+            android:layout_height="56dp"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <ImageView
-            android:background="@drawable/ripple_circle_white"
-            android:onClick="@{()->actionHandler.cancelAddGroup()}"
-            android:layout_marginStart="12dp"
-            android:src="@drawable/ic_close"
-            app:layout_constraintTop_toTopOf="@id/view_group_add_top_bar"
-            app:layout_constraintBottom_toBottomOf="@id/view_group_add_top_bar"
-            app:layout_constraintStart_toStartOf="@id/view_group_add_top_bar"
             android:id="@+id/iv_group_add_back_button"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        <TextView
-            style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size16"
-            android:text="@string/group_list_add_title"
-            app:layout_constraintTop_toTopOf="@id/view_group_add_top_bar"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:background="@drawable/ripple_circle_white"
+            android:onClick="@{()->actionHandler.cancelAddGroup()}"
+            android:src="@drawable/ic_close"
             app:layout_constraintBottom_toBottomOf="@id/view_group_add_top_bar"
             app:layout_constraintStart_toStartOf="@id/view_group_add_top_bar"
-            app:layout_constraintEnd_toEndOf="@id/view_group_add_top_bar"
+            app:layout_constraintTop_toTopOf="@id/view_group_add_top_bar" />
+
+        <TextView
+            style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size16"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:text="@string/group_list_add_title"
+            app:layout_constraintBottom_toBottomOf="@id/view_group_add_top_bar"
+            app:layout_constraintEnd_toEndOf="@id/view_group_add_top_bar"
+            app:layout_constraintStart_toStartOf="@id/view_group_add_top_bar"
+            app:layout_constraintTop_toTopOf="@id/view_group_add_top_bar" />
+
         <ProgressBar
-            app:layout_constraintBottom_toTopOf="@id/tv_group_add_prev_button"
-            android:layout_marginBottom="5dp"
-            android:id="@+id/progressBar"
+            android:id="@+id/progressbar_add_group"
             android:layout_width="match_parent"
             android:layout_height="8dp"
-            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="5dp"
             android:indeterminate="false"
-            android:progress="50"
             android:max="100"
-            android:background="@android:color/darker_gray" />
+            style="@style/group_add_custom_progressbar"
+            app:currentPageProgress="@{vm.currentPage}"
+            app:layout_constraintBottom_toTopOf="@id/tv_group_add_prev_button" />
+
         <TextView
-            android:background="@drawable/rect_orange100_fill_12"
             android:id="@+id/tv_group_add_prev_button"
-            android:text="이전"
-            android:gravity="center"
-            app:layout_constraintHorizontal_weight="2"
-            android:padding="16dp"
-            android:layout_marginBottom="20dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginEnd="10dp"
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/rect_orange100_fill_12"
+            android:gravity="center"
+            android:padding="16dp"
+            android:text="이전"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/tv_group_add_next_button"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"/>
+            app:layout_constraintHorizontal_weight="2"
+            app:layout_constraintStart_toStartOf="parent" />
+
         <TextView
-            android:text="다음"
+            android:id="@+id/tv_group_add_next_button"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
             android:background="@drawable/rect_orange100_fill_12"
             android:gravity="center"
-            app:layout_constraintStart_toEndOf="@id/tv_group_add_prev_button"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:id="@+id/tv_group_add_next_button"
             android:padding="16dp"
-            android:layout_marginBottom="20dp"
-            app:layout_constraintHorizontal_weight="3"
+            android:text="다음"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_weight="3"
+            app:layout_constraintStart_toEndOf="@id/tv_group_add_prev_button" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
