--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -380,4 +380,8 @@
         <item name="android:paddingVertical">8dp</item>
         <item name="android:layout_marginEnd">0dp</item>
     </style>
+
+    <style name="group_add_custom_progressbar" parent="Widget.AppCompat.ProgressBar.Horizontal">
+        <item name="android:progressDrawable">@drawable/progressbar_linear_progress</item>
+    </style>
 </resources>
