--- a/android/app/src/main/res/layout/activity_group_add.xml
+++ b/android/app/src/main/res/layout/activity_group_add.xml
@@ -69,6 +69,7 @@
             app:layout_constraintBottom_toTopOf="@id/tv_group_add_prev_button" />
 
         <TextView
+            onSingleClick="@{()->actionHandler.navigatePrevPage()}"
             android:id="@+id/tv_group_add_prev_button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -78,23 +79,26 @@
             android:gravity="center"
             android:padding="16dp"
             android:text="이전"
+            style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size16"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/tv_group_add_next_button"
-            app:layout_constraintHorizontal_weight="2"
+            app:layout_constraintHorizontal_weight="1"
             app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
+            onSingleClick="@{()->actionHandler.navigateNextPage()}"
             android:id="@+id/tv_group_add_next_button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
+            style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size16"
             android:background="@drawable/rect_orange100_fill_12"
             android:gravity="center"
             android:padding="16dp"
             android:text="다음"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_weight="3"
+            app:layout_constraintHorizontal_weight="1"
             app:layout_constraintStart_toEndOf="@id/tv_group_add_prev_button" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
