--- a/android/app/src/main/res/layout/fragment_group_add_filter.xml
+++ b/android/app/src/main/res/layout/fragment_group_add_filter.xml
@@ -67,8 +67,8 @@
             style="@style/group_add_custom_checkbox"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:checked="true"
             android:minHeight="0dp"
+            android:checked="@{vm.allSizeSelectState}"
             android:onCheckedChanged="@{(buttonView, isChecked) -> vm.selectAllSizeFilter(isChecked)}"
             android:text="@string/group_add_filter_all_select" />
 
@@ -89,6 +89,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="5dp"
                 app:actionHandler="@{vm}"
+                app:selectState = "@{vm.allSizeSelectState}"
                 app:menu="@{GroupFilter.SMALL_DOG_NAME}" />
 
             <include
@@ -97,6 +98,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="5dp"
                 app:actionHandler="@{vm}"
+                app:selectState = "@{vm.allSizeSelectState}"
                 app:menu="@{GroupFilter.MEDIUM_DOG_NAME}" />
 
             <include
@@ -105,6 +107,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="5dp"
                 app:actionHandler="@{vm}"
+                app:selectState = "@{vm.allSizeSelectState}"
                 app:menu="@{GroupFilter.BIG_DOG_NAME}" />
         </com.google.android.flexbox.FlexboxLayout>
 
@@ -126,7 +129,7 @@
             style="@style/group_add_custom_checkbox"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:checked="true"
+            android:checked="@{vm.allGenderSelectState}"
             android:minHeight="0dp"
             android:onCheckedChanged="@{(buttonView, isChecked) -> vm.selectAllGenderFilter(isChecked)}"
             android:text="@string/group_add_filter_all_select" />
@@ -148,6 +151,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="5dp"
                 app:actionHandler="@{vm}"
+                app:selectState = "@{vm.allGenderSelectState}"
                 app:menu="@{GroupFilter.MALE_NAME}" />
 
             <include
@@ -156,6 +160,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="5dp"
                 app:actionHandler="@{vm}"
+                app:selectState = "@{vm.allGenderSelectState}"
                 app:menu="@{GroupFilter.NEUTRALIZING_FEMALE_NAME}" />
 
             <include
@@ -164,6 +169,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="5dp"
                 app:actionHandler="@{vm}"
+                app:selectState = "@{vm.allGenderSelectState}"
                 app:menu="@{GroupFilter.FEMALE_NAME}" />
 
             <include
@@ -172,6 +178,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="5dp"
                 app:actionHandler="@{vm}"
+                app:selectState = "@{vm.allGenderSelectState}"
                 app:menu="@{GroupFilter.NEUTRALIZING_MALE_NAME}" />
         </com.google.android.flexbox.FlexboxLayout>
     </LinearLayout>
